# ai-model-usage-linux

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.claude/commands/: goal.md
gnome-extension/ai-usage-indicator@matom.ai/: extension.js  metadata.json  stylesheet.css
packaging/: ai-usage-indicator.service
src/ai_usage_indicator/: __init__.py  __main__.py  config.py  net.py  state.py  usage.py
src/ai_usage_indicator/providers/: __init__.py  base.py  claude.py  codex.py  mock.py
